# fast-api-real

./: .dockerignore  Dockerfile.app  Dockerfile.db_init  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: deploy.yml
configs/: dev.config.yaml  prod.config.yaml
src/api/: main.py
src/api/core/: authentication_middleware.py  config.py  db.py
src/api/routes/: health.py  items.py
src/api/schemas/: item.py
